remove dark mode toggle button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,8 @@ layout: compress
   </head>
 
   <body>
-    <button id="theme-toggle">Toggle Dark Mode</button> <!-- Dark mode toggle button -->
+    <!-- Dark mode toggle button -->
+    <!-- <button id="theme-toggle">Toggle Dark Mode</button> -->
 
     {% include browser-upgrade.html %}
     {% include masthead.html %}
