test dark mode icon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,9 @@ layout: compress
 
   <body>
     <!-- Dark mode toggle button -->
-    <button id="theme-toggle">Toggle Dark Mode</button>
+    <button id="theme-toggle" class="theme-toggle">
+      <i class="fas fa-moon"></i>
+    </button>
 
     {% include browser-upgrade.html %}
     {% include masthead.html %}
