--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@ body {
   }
   
   header {
-    background-color: #f8f9fa; /* Light header background */
+    background-color: #ffffff; /* Light header background */
     color: #000000;
   }
   
