--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@ layout: compress
   <body>
     <!-- Dark mode toggle button -->
     <button id="theme-toggle" class="theme-toggle">
-      <i class="fas fa-moon"></i>
+      <i id="theme-icon" class="fas fa-moon"></i>
     </button>
 
     {% include browser-upgrade.html %}
@@ -40,16 +40,26 @@ layout: compress
     <script>
       document.addEventListener('DOMContentLoaded', (event) => {
         const toggleButton = document.getElementById('theme-toggle');
-        const currentTheme = localStorage.getItem('theme') || 'light';
+        const currentTheme = localStorage.getItem('theme') || 'dark';
 
         if (currentTheme === 'dark') {
           document.body.classList.add('dark-mode');
+          themeIcon.classList.remove('fa-moon');
+          themeIcon.classList.add('fa-sun');
         }
 
         toggleButton.addEventListener('click', () => {
           document.body.classList.toggle('dark-mode');
           const theme = document.body.classList.contains('dark-mode') ? 'dark' : 'light';
           localStorage.setItem('theme', theme);
+
+          if (theme === 'dark') {
+            themeIcon.classList.remove('fa-moon');
+            themeIcon.classList.add('fa-sun');
+          } else {
+            themeIcon.classList.remove('fa-sun');
+            themeIcon.classList.add('fa-moon');
+          }
         });
       });
     </script>
