fix colours and placing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@ layout: compress
     <script>
       document.addEventListener('DOMContentLoaded', (event) => {
         const toggleButton = document.getElementById('theme-toggle');
-        const currentTheme = localStorage.getItem('theme') || 'dark';
+        const currentTheme = localStorage.getItem('theme') || 'light';
 
         if (currentTheme === 'dark') {
           document.body.classList.add('dark-mode');
