--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,7 +22,7 @@ body.dark-mode {
   }
   
   body.dark-mode header {
-    background-color: #2c2c2c; /* Dark header background */
+    background-color: #030303; /* Dark header background */
     color: #dcdcdc;
   }
 
